[tool.poetry]
name = "telegram-bot"
version = "1.0.0"
description = "Telegram bot for document services"

[tool.poetry.dependencies]
python = "^3.10"
telethon = "^1.28.5"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
aiohttp = "^3.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"